# thrend

./: .gitignore  CMakeLists.txt  README.md  cm-grayscale  materials  viewSettings  viewSettings-B
ThRend/: Material.h  Model.cpp  Model.h  ONB.h  OWLRenderer.cpp  OWLRenderer.h  colormap.h  deviceCode.cu  devicePrograms.cu  main.cpp  materialLoader.h  reflections.h
utils/: README.md  requirements.txt  stlToUdcConvertor.py
utils/examples/: M10_B&T.stl
